Formatting changes and image size changes

--- a/Presentation/Chloe.html
+++ b/Presentation/Chloe.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">        
         <link rel="stylesheet" type="text/css" media="screen" href="formatting.css">
     </head>
-    <body style="background-color: dimgrey;"> 
+    <body> 
 		<div>
 			<table align="center" celspacing="0" cellpadding="0">
 				<tr>
@@ -19,8 +19,8 @@
 										<td align="center" valign="top">
 											<ul id="nav">
 												<li class="all"><a href="index.html"><img src="images/Blank_sm.png" /></a></li>
-												<li class="all"><a href="PatrickP.html"><img src="images/PatrickP_sm.png" /></a></li>
 												<li class="all"><a href="Deshaune.html"><img src="images/Deshaune_sm.png" /></a></li>
+												<li class="all"><a href="PatrickP.html"><img src="images/PatrickP_sm.png" /></a></li>
 												<li class="all"><a href="Efe.html"><img src="images/Efe_sm.png" /></a></li>
 												<li class="all"><a href="Nene.html"><img src="images/Nene_sm.png" /></a></li>
 												<li class="all"><a href=""><img src="images/Chloe_sm.png" /></a></li>
