--- a/Presentation/index.html
+++ b/Presentation/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">        
         <link rel="stylesheet" type="text/css" media="screen" href="formatting.css">
     </head>
-    <body style="background-color: lightgrey;"> 
+    <body> 
 		<div>
 			<table align="center" celspacing="0" cellpadding="0">
 				<tr>
@@ -19,8 +19,8 @@
 										<td align="center" valign="top">
 											<ul id="nav">
 												<li class="all"><a href=""><img src="images/Blank_sm.png" /></a></li>
-												<li class="all"><a href="PatrickP.html"><img src="images/PatrickP_sm.png" /></a></li>
 												<li class="all"><a href="Deshaune.html"><img src="images/Deshaune_sm.png" /></a></li>
+												<li class="all"><a href="PatrickP.html"><img src="images/PatrickP_sm.png" /></a></li>
 												<li class="all"><a href="Efe.html"><img src="images/Efe_sm.png" /></a></li>
 												<li class="all"><a href="Nene.html"><img src="images/Nene_sm.png" /></a></li>
 												<li class="all"><a href="Chloe.html"><img src="images/Chloe_sm.png" /></a></li>
@@ -69,7 +69,7 @@
 												<tr>
 													<td align="center">
 														<span style="font-family:cursive; font-size:4vh;">
-															~ What is the best month for the best movies?<br><br>
+															~ Are the best movies released over the Summer (Jun, Jul, Aug, Sept)?<br><br>
 															~ What is the best month for each genre (Drama, Action, Sci-Fi etc)?<br><br>
 															~ What is the best month for movies of each rating (G, PG, R etc)?<br><br>
 															~ Do longer movies typically have higher viewer ratings?
