Presentation changes to date
I still need to add pages for Patrick H and Efe and also change the index.html file to reflect our questions.

--- a/Presentation/index.html
+++ b/Presentation/index.html
@@ -43,7 +43,7 @@
 								<table width="100%">
 									<tr>
 										<td align="center">
-											<table width="75%">
+											<table width="60%">
 												<tr>
 													<td align="center">
 														<img src="images/Blank_stone.png" />
@@ -67,7 +67,7 @@
 												</tr>
 												
 												<tr>
-													<td align="center">
+													<td align="left">
 														<span style="font-family:cursive; font-size:4vh;">
 															~ Are the best movies released over the Summer (Jun, Jul, Aug, Sept)?<br><br>
 															~ What is the best month for each genre (Drama, Action, Sci-Fi etc)?<br><br>
