--- a/Presentation/Deshaune.html
+++ b/Presentation/Deshaune.html
@@ -43,7 +43,7 @@
 								<table width="100%">
 									<tr>
 										<td align="center">
-											<table width="75%">
+											<table width="60%">
 												<tr>
 													<td align="center">
 														<img src="images/Deshaune.png" />
@@ -67,9 +67,66 @@
 												</tr>
 												
 												<tr>
-													<td align="center">
+													<td align="left">
 														<span style="font-family:cursive; font-size:4vh;">
+															<a href="https://github.com/djbailey20/Homework/blob/master/Project/Data%20Pull.ipynb" style="color:#980400;" target="_blank"><b>Data Pulling:</b></a><br>
+															<br>
+															1. The Movie Database (https://api.TheMovieDB.org)<br>
+															<br>
+															&emsp;a. 48,593 titles<br><br>
+															<img src="../Images/DataPull1.png" width="75%" /><br>
+															<img src="../Images/DataPull2.png" width="75%" /><br>
+															<br>
+															2. Online Movie Database (http://www.OMDBAPI.com)<br>
+															<br>
+															&emsp;a. 20 columns<br>
+															&emsp;b. Final output to CSV for data wrangling<br><br>
+															<img src="../Images/DataPull3.png" width="75%" /><br>
+															<br>
 															
+															<a href="https://github.com/djbailey20/Homework/blob/master/Project/Data%20Wrangling.ipynb" style="color:#980400;" target="_blank"><b>Data Wrangling:</b></a><br>
+															<br>
+															1. Importing from CSV<br>
+															2. Added 3 movie release columns:<br>
+															<br>
+															&emsp;a. Day of Release (Monday, Tuesday etc)<br>
+															&emsp;b. Month of Release<br>
+															&emsp;c. Year of Release<br>
+															&emsp;d. Divided Revenue column by 1M because of zeros<br>
+															<br>
+															<img src="../Images/DataWrangling1.png" width="75%" /><br>
+															<br>
+															<a href="https://github.com/djbailey20/Homework/blob/master/Project/Data%20Wrangling%20part%202.ipynb" style="color:#980400;" target="_blank"><b>Data Conversions:</b></a><br>
+															<br>
+															1. Converted movie run time (ex. &quot;99 min&quot;) to integer<br>
+															<br>
+															<img src="../Images/Conversion1.png" width="75%" /><br>
+															<br>
+															2. Dropped made for TV movies (ex. &quot;TV-12&quot;)<br>
+															<br>
+															<img src="../Images/Conversion2.png" width="75%" /><br>
+															<br>
+															3. Exported to CSV to share with the team<br>
+															<br>
+															&emsp;a. Final movie count was 2,058<br>
+															<br>
+															<br>
+															<a href="https://github.com/djbailey20/Homework/blob/master/Project/Analysis/Box%20Plots%20by%20Year.ipynb" style="color:#980400;" target="_blank"><b>Anaylysis:</b></a><br>
+															<br>
+															<b>Has Movie Revenue Changed Throughout The Years?</b><br>
+															<br>
+															1. Huge outlier in 2009 (Avatar)<br>
+															2. ANOVA with P-Value of ~0.619<br>
+															<br>
+															<img src="../Images/Deshaune_Analysis1.png" width="75%" /><br>
+															<img src="../Images/Deshaune_Analysis2.png" width="75%" /><br>
+															<img src="../Images/BoxPlot_AnnualRevenues.png" width="75%" /><br>
+															And again without the outlilers<br>
+															<img src="../Images/BoxPlot_AnnualRevenues_without_outliers.png" width="75%" /><br>
+															<br>
+															<br>
+															<br>
+															<br>&nbsp;
 														</span>
 													</td>
 												</tr>
@@ -80,6 +137,10 @@
 							</p>
 						</div>
 					</td>
+				</tr>
+		
+				<tr>
+					<td style="background-image: url('images/Curtains_Scroll.png')"></td>
 				</tr>
 			</table>
 
