--- a/Presentation/Chloe.html
+++ b/Presentation/Chloe.html
@@ -77,21 +77,21 @@
 															<br>
 															2. Searching for outliers<br>
 															<br>
-															<img src="../Images/Chloe_Outliers.png" /><br>
+															<img src="images/Chloe_Outliers.png" /><br>
 															<br>
 															3. Finding Upper and Lower Limits for our bins<br>
 															<br>
-															<img src="../Images/Chloe_Limits.png" /><br>
+															<img src="images/Chloe_Limits.png" /><br>
 															<br>
 															4. Binning<br>
 															<br>
-															<img src="../Images/Chloe_Binning.png" /><br>
+															<img src="images/Chloe_Binning.png" /><br>
 															<br>
 															5. Correlation between Movie Runtime (min) and Revenue<br>
 															<br>
-															<img src="../Images/RuntimeVRevenue.png" /><br>
+															<img src="images/RuntimeVRevenue.png" /><br>
 															<br>
-															<img src="../Images/RuntimeVIMDBRating.png" /><br>
+															<img src="images/RuntimeVIMDBRating.png" /><br>
 															<br>
 															<br>
 															<br>
