--- a/Presentation/Nene.html
+++ b/Presentation/Nene.html
@@ -75,15 +75,15 @@
 															<br>
 															2. Get top 5 movie genres by IMDB Rating Sum<br>
 															<br>
-															<img src="../Images/MostPopGenres.png" /><br>
+															<img src="images/MostPopGenres.png" /><br>
 															<br>
 															3. Top 5 Movie Genres<br>
 															<br>
-															<img src="../Images/NeneIMDBVGenre.png" /><br>
+															<img src="images/NeneIMDBVGenre.png" /><br>
 															<br>
 															4. What if we break it out by year, is Action still the most popular?<br>
 															<br>
-															<img src="../Images/IMDBRatingVYear.png" /><br>
+															<img src="images/IMDBRatingVYear.png" /><br>
 															<br>
 															<br>
 															<br>
