--- a/Presentation/index.html
+++ b/Presentation/index.html
@@ -53,7 +53,8 @@
 												<tr>
 													<td align="center">
 														<span style="font-family:cursive; font-size:5vh;">
-															<br><b>&quot;Summer Blockbuster Movies&quot;</b>, real or just marketing?<br>&nbsp;
+															<b>&quot;Summer Blockbuster Movies&quot;</b><br>
+															Are they real or just marketing?
 														</span>
 													</td>
 												</tr>
@@ -69,10 +70,24 @@
 												<tr>
 													<td align="left">
 														<span style="font-family:cursive; font-size:4vh;">
-															~ Are the best movies released over the Summer (Jun, Jul, Aug, Sept)?<br><br>
-															~ What is the best month for each genre (Drama, Action, Sci-Fi etc)?<br><br>
-															~ What is the best month for movies of each rating (G, PG, R etc)?<br><br>
-															~ Do longer movies typically have higher viewer ratings?
+														&emsp;1. Are the best movies released over the Summer?<br>
+														<br>
+														&emsp;2. Has movie revenue changed throughout the years?<br>
+														<br>
+														&emsp;3. Is there a correlation between reviews and revenue?<br>
+														<br>
+														&emsp;4. Do longer running movies generate higher Revenue?<br>
+														<br>
+														&emsp;5. And, do they receive higher IMDB Ratings?<br>
+														<br>
+														&emsp;6. Which movie genres are the most popular?<br>
+														<br>
+														<br>
+														<br>
+														<br>
+														<br>
+														<br>
+														<br>&nbsp;
 														</span>
 													</td>
 												</tr>
