--- a/Presentation/Deshaune.html
+++ b/Presentation/Deshaune.html
@@ -14,33 +14,23 @@
 						<img id="bgimage" src="images/curtains.png" />
 						<div id="content">
 							<p align="center">
-								<table width="90%">                
+								<table id="nav-container" width="90%">                
 									<tr>
 										<td align="center" valign="top">
 											<ul id="nav">
-												<li class="all"><a href="index.html"><img src="images/Blank_sm.png" /></a></li>
-												<li class="all"><a href=""><img src="images/Deshaune_sm.png" /></a></li>
-												<li class="all"><a href="PatrickP.html"><img src="images/PatrickP_sm.png" /></a></li>
-												<li class="all"><a href="Efe.html"><img src="images/Efe_sm.png" /></a></li>
-												<li class="all"><a href="Nene.html"><img src="images/Nene_sm.png" /></a></li>
-												<li class="all"><a href="Chloe.html"><img src="images/Chloe_sm.png" /></a></li>
-												<li class="all"><a href="PatrickH.html"><img src="images/PatrickH_sm.png" /></a></li>
+												<li class="all"><a href="index.html"><img src="images/Blank_stone.png" /></a></li>
+												<li class="all active"><a href="Deshaune.html"><img src="images/Deshaune.png" /></a></li>
+												<li class="all"><a href="PatrickP.html"><img src="images/PatrickP.png" /></a></li>
+												<li class="all"><a href="Efe.html"><img src="images/Efe.png" /></a></li>
+												<li class="all"><a href="Nene.html"><img src="images/Nene.png" /></a></li>
+												<li class="all"><a href="Chloe.html"><img src="images/Chloe.png" /></a></li>
+												<li class="all"><a href="PatrickH.html"><img src="images/PatrickH.png" /></a></li>
 											</ul>
 										</td>
 									</tr>
 								</table>
 
-								<table align="center" width="90%">
-									<tr>
-										<td align="center">
-											<table width="100%">
-												<tr><td align="center" height="30vh">&nbsp;</td></tr>
-											</table>
-										</td>
-									</tr>
-								</table>
-
-								<table width="100%">
+								<table id="content-container" width="100%">
 									<tr>
 										<td align="center">
 											<table width="60%">
@@ -83,7 +73,7 @@
 															<br>
 															&emsp;b. Final output to CSV for data wrangling<br>
 															<br>
-															<img src="/DataPull3.png" width="75%" /><br>
+															<img src="images/DataPull3.png" width="75%" /><br>
 															<br>
 															
 															<a href="https://github.com/djbailey20/Homework/blob/master/Project/Data%20Wrangling.ipynb" style="color:#980400;" target="_blank"><b>Data Wrangling:</b></a><br>
@@ -117,30 +107,22 @@
 															&emsp;a. Final movie count was 2,058<br>
 															<br>
 															<br>
-															<a href="https://github.com/djbailey20/Homework/blob/master/Project/Analysis/Box%20Plots%20by%20Year.ipynb" style="color:#980400;" target="_blank"><b>Anaylysis:</b></a><br>
+															<a href="https://github.com/djbailey20/Homework/blob/master/Project/Analysis/Box%20Plots%20by%20Year.ipynb" style="color:#980400;" target="_blank"><b>Analysis:</b></a><br>
 															<br>
 															<b>Has Movie Revenue Changed Throughout The Years?</b><br>
-															<br>
-															1. Huge outlier in 2009 (Avatar)<br>
-															<br>
-															2. ANOVA with P-Value of ~0.619<br>
-															<br>
 															<img src="images/Deshaune_Analysis1.png" width="75%" /><br>
 															<img src="images/Deshaune_Analysis2.png" width="75%" /><br>
-															<img src="images/BoxPlot_AnnualRevenues.png" width="75%" /><br>
-															And again without the outlilers<br>
-															<img src="images/BoxPlot_AnnualRevenues_without_outliers.png" width="75%" /><br>
-															<br>
-															<br>
-															<br>
-															<br>&nbsp;
+															<img class="chart" src="images/BoxPlot_AnnualRevenues.png" width="75%" /><br>
+															And again without the outliers<br>
+															<img class="chart" src="images/BoxPlot_AnnualRevenues_without_outliers.png" width="75%" /><br>
+															ANOVA with P-Value of ~0.619<br>
 														</span>
 													</td>
 												</tr>
 											</table>
 										</td>
 									</tr>
-								</table>
+								</table id="content-container">
 							</p>
 						</div>
 					</td>
