--- a/Presentation/PatrickP.html
+++ b/Presentation/PatrickP.html
@@ -14,49 +14,39 @@
 						<img id="bgimage" src="images/curtains.png" />
 						<div id="content">
 							<p align="center">
-								<table width="90%">                
+								<table id="nav-container" width="90%">                
 									<tr>
 										<td align="center" valign="top">
 											<ul id="nav">
-												<li class="all"><a href="index.html"><img src="images/Blank_sm.png" /></a></li>
-												<li class="all"><a href=""><img src="images/Deshaune_sm.png" /></a></li>
-												<li class="all"><a href=""><img src="images/PatrickP_sm.png" /></a></li>
-												<li class="all"><a href="Efe.html"><img src="images/Efe_sm.png" /></a></li>
-												<li class="all"><a href="Nene.html"><img src="images/Nene_sm.png" /></a></li>
-												<li class="all"><a href="Chloe.html"><img src="images/Chloe_sm.png" /></a></li>
-												<li class="all"><a href="PatrickH.html"><img src="images/PatrickH_sm.png" /></a></li>
+												<li class="all"><a href="index.html"><img src="images/Blank_stone.png" /></a></li>
+												<li class="all"><a href="Deshaune.html"><img src="images/Deshaune.png" /></a></li>
+												<li class="all"><a href="PatrickP.html"><img src="images/PatrickP.png" /></a></li>
+												<li class="all"><a href="Efe.html"><img src="images/Efe.png" /></a></li>
+												<li class="all"><a href="Nene.html"><img src="images/Nene.png" /></a></li>
+												<li class="all"><a href="Chloe.html"><img src="images/Chloe.png" /></a></li>
+												<li class="all"><a href="PatrickH.html"><img src="images/PatrickH.png" /></a></li>
 											</ul>
 										</td>
 									</tr>
 								</table>
 
-								<table align="center" width="90%">
-									<tr>
-										<td align="center">
-											<table width="100%">
-												<tr><td align="center" height="30vh">&nbsp;</td></tr>
-											</table>
-										</td>
-									</tr>
-								</table>
-
-								<table width="100%">
+								<table id="content-container" width="100%">
 									<tr>
 										<td align="center">
 											<table width="60%">
 												<tr>
 													<td align="center">
-														<span style="font-family:cursive; font-size:15vh;"><img src="images/PatrickP.png" /></span>
+														<img src="images/PatrickP.png" />
 													</td>
 												</tr>
 												
 												<tr>
 													<td align="center">
-														<span style="font-family:cursive; font-size:8vh;">
+														<!-- <span style="font-family:cursive; font-size:8vh;">
 															Proving our assumptions:<br><br>
-														</span>
-														<span style="font-family:cursive; font-size:4vh;">
-															Do higher viewer ratings mean higher revenue?
+														</span> -->
+														<span style="font-family:cursive; font-size:5vh;">
+															<b>Do higher viewer ratings mean higher revenue?</b>
 														</span>
 													</td>
 												</tr>
@@ -111,19 +101,14 @@
 															<img src="images/PHP_Function.png" /><br>
 															<br>
 															<img src="images/RevVIMDBScore.png" /><br>
-															<br>
-															<br>
-															<br>
-															<br>
-															<br>
-															<br>&nbsp;
+															
 														</span>
 													</td>
 												</tr>
 											</table>
 										</td>
 									</tr>
-								</table>
+								</table id="content-container">
 							</p>
 						</div>
 					</td>
