--- a/Presentation/PatrickH.html
+++ b/Presentation/PatrickH.html
@@ -14,33 +14,23 @@
 						<img id="bgimage" src="images/curtains.png" />
 						<div id="content">
 							<p align="center">
-								<table width="90%">                
+								<table id="nav-container" width="90%">                
 									<tr>
 										<td align="center" valign="top">
 											<ul id="nav">
-												<li class="all"><a href="index.html"><img src="images/Blank_sm.png" /></a></li>
-												<li class="all"><a href="Deshaune.html"><img src="images/Deshaune_sm.png" /></a></li>
-												<li class="all"><a href="PatrickP.html"><img src="images/PatrickP_sm.png" /></a></li>
-												<li class="all"><a href="Efe.html"><img src="images/Efe_sm.png" /></a></li>
-												<li class="all"><a href="Nene.html"><img src="images/Nene_sm.png" /></a></li>
-												<li class="all"><a href="Chloe.html"><img src="images/Chloe_sm.png" /></a></li>
-												<li class="all"><a href=""><img src="images/PatrickH_sm.png" /></a></li>
+												<li class="all"><a href="index.html"><img src="images/Blank_stone.png" /></a></li>
+												<li class="all"><a href="Deshaune.html"><img src="images/Deshaune.png" /></a></li>
+												<li class="all"><a href="PatrickP.html"><img src="images/PatrickP.png" /></a></li>
+												<li class="all"><a href="Efe.html"><img src="images/Efe.png" /></a></li>
+												<li class="all"><a href="Nene.html"><img src="images/Nene.png" /></a></li>
+												<li class="all"><a href="Chloe.html"><img src="images/Chloe.png" /></a></li>
+												<li class="all"><a href="PatrickH.html"><img src="images/PatrickH.png" /></a></li>
 											</ul>
 										</td>
 									</tr>
 								</table>
 
-								<table align="center" width="90%">
-									<tr>
-										<td align="center">
-											<table width="100%">
-												<tr><td align="center" height="30vh">&nbsp;</td></tr>
-											</table>
-										</td>
-									</tr>
-								</table>
-
-								<table width="100%">
+								<table id="content-container" width="100%">
 									<tr>
 										<td align="center">
 											<table width="60%">
@@ -69,8 +59,8 @@
 												<tr>
 													<td align="left">
 														<span style="font-family:cursive; font-size:4vh;">
-															<b>Does a higher Budget for a movie translate<br>
-																to more money in Revenue?</b><br>
+															<b style="font-family:cursive; font-size:5vh;">Does a higher Budget for a movie translate<br>
+																to more money in Revenue?</b style="font-family:cursive; font-size:5vh;"><br>
 															<br>
 															<br>
 															<a href="https://github.com/patrickhpatin/Project1/blob/master/PHanalysis.ipynb" style="color:#980400;" target="_blank"><b>Analysis:</b></a><br>
@@ -79,11 +69,11 @@
 															<br>
 															2. Plot Revenue versus Budget<br>
 															<br>
-															<img src="images/PHRevVBudget.png" /><br>
+															<img  class="chart" src="images/PHRevVBudget.png" /><br>
 															<br>
 															3. What does this data mean?<br>
 															<br>
-															<img src="images/PHRevVBudgetWReg.png" /><br>
+															<img  class="chart" src="images/PHRevVBudgetWReg.png" /><br>
 															<br>
 															4. How did I do that?<br>
 															<br>
@@ -104,20 +94,14 @@
 															<br>
 															2. Merging Branches<br>
 															<br>
-															&emsp;a. Aside from the .ipynb file issue, merging wasn't difficult
-															<br>
-															<br>
-															<br>
-															<br>
-															<br>
-															<br>&nbsp;
+															&emsp;a. Aside from the .ipynb file issue, merging wasn't difficult															
 														</span>
 													</td>
 												</tr>
 											</table>
 										</td>
 									</tr>
-								</table>
+								</table id="content-container">
 							</p>
 						</div>
 					</td>
