--- a/Presentation/index.html
+++ b/Presentation/index.html
@@ -14,33 +14,23 @@
 						<img id="bgimage" src="images/curtains.png" />
 						<div id="content">
 							<p align="center">
-								<table width="90%">                
+								<table id="nav-container" width="90%">                
 									<tr>
 										<td align="center" valign="top">
 											<ul id="nav">
-												<li class="all"><a href=""><img src="images/Blank_sm.png" /></a></li>
-												<li class="all"><a href="Deshaune.html"><img src="images/Deshaune_sm.png" /></a></li>
-												<li class="all"><a href="PatrickP.html"><img src="images/PatrickP_sm.png" /></a></li>
-												<li class="all"><a href="Efe.html"><img src="images/Efe_sm.png" /></a></li>
-												<li class="all"><a href="Nene.html"><img src="images/Nene_sm.png" /></a></li>
-												<li class="all"><a href="Chloe.html"><img src="images/Chloe_sm.png" /></a></li>
-												<li class="all"><a href="PatrickH.html"><img src="images/PatrickH_sm.png" /></a></li>
+												<li class="all"><a href="index.html"><img src="images/Blank_stone.png" /></a></li>
+												<li class="all"><a href="Deshaune.html"><img src="images/Deshaune.png" /></a></li>
+												<li class="all"><a href="PatrickP.html"><img src="images/PatrickP.png" /></a></li>
+												<li class="all"><a href="Efe.html"><img src="images/Efe.png" /></a></li>
+												<li class="all"><a href="Nene.html"><img src="images/Nene.png" /></a></li>
+												<li class="all"><a href="Chloe.html"><img src="images/Chloe.png" /></a></li>
+												<li class="all"><a href="PatrickH.html"><img src="images/PatrickH.png" /></a></li>
 											</ul>
 										</td>
 									</tr>
 								</table>
 
-								<table align="center" width="90%">
-									<tr>
-										<td align="center">
-											<table width="100%">
-												<tr><td align="center" height="75px">&nbsp;</td></tr>
-											</table>
-										</td>
-									</tr>
-								</table>
-
-								<table width="100%">
+								<table width="100%" id="content-container" style="margin-top:100px">
 									<tr>
 										<td align="center">
 											<table width="60%">
@@ -70,24 +60,17 @@
 												<tr>
 													<td align="left">
 														<span style="font-family:cursive; font-size:4vh;">
-														&emsp;1. Are the best movies released over the Summer?<br>
-														<br>
-														&emsp;2. Has movie revenue changed throughout the years?<br>
-														<br>
-														&emsp;3. Is there a correlation between reviews and revenue?<br>
-														<br>
-														&emsp;4. Do longer running movies generate higher Revenue?<br>
-														<br>
-														&emsp;5. And, do they receive higher IMDB Ratings?<br>
-														<br>
-														&emsp;6. Which movie genres are the most popular?<br>
-														<br>
-														<br>
-														<br>
-														<br>
-														<br>
-														<br>
-														<br>&nbsp;
+															&emsp;1. Are the best movies released over the Summer?<br>
+															<br>
+															&emsp;2. Has movie revenue changed throughout the years?<br>
+															<br>
+															&emsp;3. Is there a correlation between reviews and revenue?<br>
+															<br>
+															&emsp;4. Do longer running movies generate higher Revenue?<br>
+															<br>
+															&emsp;5. And, do they receive higher IMDB Ratings?<br>
+															<br>
+															&emsp;6. Which movie genres are the most popular?
 														</span>
 													</td>
 												</tr>
